[project]
name = "qherde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "pydantic-settings>=2.7.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.mypy]
plugins = ['pydantic.mypy']